--- a/2021-1/tareas/tarea_07.tex
+++ b/2021-1/tareas/tarea_07.tex
@@ -110,7 +110,7 @@
 
 \newcommand{\tarea}[1]{
 	\begin{center}
-		{\Large Matemática Discreta I - 2020/1} \vskip.4cm
+		{\Large Matemática Discreta I - 2021/1} \vskip.4cm
 		{\Large Tarea #1}\vskip .4cm
 \end{center}}
 
@@ -144,15 +144,15 @@
 \begin{ejercicio}
 	\begin{enumerate}
 		%\item[1.] (60 pts) Probar que para $n \ge 0$ se satisface $3 | 2^{3n+2} + 5^{n+3}$.  
-		\item[1.] (50 pts) Probar que $\sqrt[3]{9}$ no es un número racional.
-		\item[2.]  (50 pts) Calcular el máximo común divisor y el mínimo común múltiplo de $1176$ y $450$  usando la descomposición en números primos.
+		\item[1.] (50 pts) Probar que no existen $m,n \in \mathbb Z$ tal que $9\, m^3=n^3$. 
+		\item[2.]  (50 pts) Calcular el máximo común divisor y el mínimo común múltiplo de $2772$ y $33000$ usando la descomposición en números primos.
 	\end{enumerate}
 \end{ejercicio}
 	
 \begin{comment}
 \begin{solucion}
 
-1. Deebemos probar que $\sqrt[3]{9}$ no es cociente de dos números naturales. Lo haremos por el absurdo: supongamos que $\sqrt[3]{9} = \frac{m}{n}$  con $m, n$ números naturales. 
+1. Debemos probar que $\sqrt[3]{9}$ no es cociente de dos números naturales. Lo haremos por el absurdo: supongamos que $\sqrt[3]{9} = \frac{m}{n}$  con $m, n$ números naturales. 
 Luego,
 \begin{equation*}
 	\sqrt[3]{9} = \frac{m}{n} \quad \Rightarrow  \quad  (\sqrt[3]{9})^3 = \left(\frac{m}{n}\right)^3  \quad \Rightarrow  \quad  9 = \frac{m^3}{n^3}  \quad \Rightarrow  \quad 9 {n^3}= {m^3}.
